fix: Prevent footer image from becoming too small
- Add markup and styles to footer image so that it doesn't get it too
small when screen size changes.
- Adjust the values of `sizes` for responsive images.

--- a/styles.css
+++ b/styles.css
@@ -331,6 +331,7 @@ h2 {
   padding: 0.5em;
 }
 
+
 .social__link,
 .project__link,
 .address__link {
@@ -491,6 +492,34 @@ h2 {
   flex-direction: column;
   gap: var(--space-800);
   align-items: center;
+}
+
+@media (min-width: 37.5rem) {
+  .footer__contact {
+    flex: 1;
+  }
+
+  .footer__image-container {
+    flex: 1;
+  }
+
+  .footer__image {
+    object-fit: fill;
+    width: 100%;
+    height: 100%;
+  }
+}
+
+@media (min-width: 62.5rem) {
+  .footer__contact {
+    flex: 1;
+  }
+
+  .footer__image-container {
+    flex: 2;
+  }
+
+  
 }
 
 .address {
